Portability: fix root-relative paths

--- a/index.html
+++ b/index.html
@@ -632,9 +632,9 @@ Hook this UI up to your model endpoint by editing <code>sendToModel()</code> in 
       return mock.trim();
 
       // ---- OPTION 2: REAL BACKEND CALL (sketch) ----
-      // Example (pseudo-code) if you have a backend route like /api/altius:
+      // Example (pseudo-code) if you have a backend route like ./api/altius:
       //
-      // const response = await fetch("/api/altius", {
+      // const response = await fetch("./api/altius", {
       //   method: "POST",
       //   headers: { "Content-Type": "application/json" },
       //   body: JSON.stringify({
